--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -101,3 +101,15 @@ jobs:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_PROD }}
         NAMESPACE: marketing-box
         IMAGE: ${{ steps.string.outputs.lowercase }}-${{ steps.branch.outputs.branch_name }}
+        
+    - name: restart docker container uat
+      if: ${{ steps.branch.outputs.branch_name == 'uat' }}
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.TRAFME_UAT_SVC2_HOST }}
+        username: ${{ secrets.VM_USERNAME }}
+        key: ${{ secrets.TRAFFME_SSH_KEY }}
+        port: ${{ secrets.TRAFME_UAT_SVC2_PORT }}
+        script: |
+          cd /home/monfex/docker-infrastructure/services/MarketingBox.UserApi
+          docker-compose pull && docker-compose up -d
